crates/weft-snapshots/tests/snapshots/html/corpus-tabs.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-tabs as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Account</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="account" aria-label="Account">
  <h1 data-weft-id="title">Account</h1>
  <div>
    <div data-weft-id="tabs" aria-label="Account sections" role="tablist">
      <button data-weft-id="tab-overview" type="button" role="tab" id="weft-tab-overview-tab" aria-selected="true" aria-controls="weft-tab-overview-panel">Overview</button><button data-weft-id="tab-billing" type="button" role="tab" id="weft-tab-billing-tab" aria-selected="false" aria-controls="weft-tab-billing-panel">Billing</button><button data-weft-id="tab-team" type="button" role="tab" id="weft-tab-team-tab" aria-selected="false" aria-controls="weft-tab-team-panel">Team</button>
    </div>
    <div role="tabpanel" id="weft-tab-overview-panel" aria-labelledby="weft-tab-overview-tab">
      <div data-weft-id="account-name" data-weft-kind="text" data-bind="text:$.account.name"></div>
      <div data-weft-id="account-email" data-weft-kind="text" data-bind="text:$.account.email"></div>
    </div>
    <div role="tabpanel" id="weft-tab-billing-panel" aria-labelledby="weft-tab-billing-tab" hidden>
      <div data-weft-id="plan" data-weft-kind="text" data-bind="text:$.billing.plan"></div>
      <button data-weft-id="change-plan" type="button" data-variant="primary" data-action="press:billing.change">Change plan</button>
    </div>
    <div role="tabpanel" id="weft-tab-team-panel" aria-labelledby="weft-tab-team-tab" hidden>
      <ul data-weft-id="members">
        <template data-weft-id="members-each" data-each="$.team" data-as="member">
          <li data-weft-id="member">
            <div data-weft-id="member-name" data-weft-kind="text" data-bind="text:$member.name"></div>
          </li>
        </template>
      </ul>
    </div>
  </div>
</main>
</body>
</html>
