crates/weft-snapshots/tests/snapshots/html/corpus-wizard-step.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-wizard-step as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Setup wizard</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="wizard" aria-label="Setup wizard">
  <h1 data-weft-id="title">Choose a plan</h1>
  <p data-weft-id="progress" data-bind="text:$.progress"></p>
  <fieldset data-weft-id="plan" role="radiogroup" data-bind="value:$.plan">
    <legend>Plan</legend>
    <label class="weft-toggle">
      <input data-weft-id="plan-free" type="radio" name="weft-plan" value="free">
      <span>Free</span>
    </label>
    <label class="weft-toggle">
      <input data-weft-id="plan-pro" type="radio" name="weft-plan" value="pro">
      <span>Pro</span>
    </label>
    <label class="weft-toggle">
      <input data-weft-id="plan-team" type="radio" name="weft-plan" value="team">
      <span>Team</span>
    </label>
  </fieldset>
  <div data-weft-id="nav" class="weft-row" style="gap: var(--weft-space-sm)">
    <button data-weft-id="back" type="button" data-action="press:wizard.back">Back</button>
    <button data-weft-id="next" type="button" data-variant="primary" data-bind="disabled:!$.plan" data-action="press:wizard.next">Next</button>
  </div>
</main>
</body>
</html>
